--- a/Registry-Service/pom.xml
+++ b/Registry-Service/pom.xml
@@ -54,7 +54,11 @@
             <artifactId>docker-java-transport-zerodep</artifactId>
             <version>3.3.6</version>
         </dependency>
-
+        <!-- Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
