--- a/Registry-Service/src/main/resources/application.yaml
+++ b/Registry-Service/src/main/resources/application.yaml
@@ -21,6 +21,9 @@ spring:
       mode: never
   main:
     lazy-initialization: false
+  redis:
+    host: localhost
+    port: 6379
 management:
   endpoints:
     web:
